K8S/preproduccion/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: wardkitten-pre
  labels: { app: worker, namespace: wardkitten-pre }
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels: { app: worker }
  template:
    metadata:
      name: worker
      namespace: wardkitten-pre
      labels: { app: worker, namespace: wardkitten-pre }
    spec:
      containers:
        - name: worker
          image: ghcr.io/avanware/wardkitten-worker:1
          imagePullPolicy: Always
      restartPolicy: Always
      imagePullSecrets:
        - name: avanware.ghcr.io
