K8S/preproduccion/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wardkitten-web
  namespace: wardkitten-pre
  labels: { app: wardkitten-web, namespace: wardkitten-pre }
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels: { app: wardkitten-web }
  template:
    metadata:
      name: wardkitten-web
      namespace: wardkitten-pre
      labels: { app: wardkitten-web, namespace: wardkitten-pre }
    spec:
      containers:
        - name: wardkitten-web
          image: ghcr.io/avanware/wardkitten-web:1
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet: { scheme: HTTP, path: /healthz, port: 80 }
            initialDelaySeconds: 10
            periodSeconds: 60
      restartPolicy: Always
      imagePullSecrets:
        - name: avanware.ghcr.io

---
apiVersion: v1
kind: Service
metadata:
  name: wardkitten-web
  namespace: wardkitten-pre
  labels: { app: wardkitten-web }
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector: { app: wardkitten-web }
  type: ClusterIP
