K8S/preproduccion/wardkitten.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wardkitten-pre

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wardkitten
  namespace: wardkitten-pre
  labels: { app: wardkitten, namespace: wardkitten-pre }
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels: { app: wardkitten }
  template:
    metadata:
      name: wardkitten
      namespace: wardkitten-pre
      labels: { app: wardkitten, namespace: wardkitten-pre }
    spec:
      containers:
        - name: wardkitten
          image: ghcr.io/avanware/wardkitten:1
          ports:
            - containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet: { scheme: HTTP, path: /health, port: 80 }
            initialDelaySeconds: 30
            periodSeconds: 60
      restartPolicy: Always
      imagePullSecrets:
        - name: avanware.ghcr.io

---
apiVersion: v1
kind: Service
metadata:
  name: wardkitten
  namespace: wardkitten-pre
  labels: { app: wardkitten }
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector: { app: wardkitten }
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wardkitten
  namespace: wardkitten-pre
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: app-pre.wardkitten.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: wardkitten-web, port: { number: 80 } }
    - host: api-pre.wardkitten.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: wardkitten, port: { number: 80 } }
